--- a/Order summary component challenge/index.html
+++ b/Order summary component challenge/index.html
@@ -20,14 +20,20 @@
       <p>You can now listen to millions of songs, audiobooks, and podcasts on any
         device anywhere you like!</p>
     </div>
+
     <div class='annualPlan'>
-      <h2>Annual Plan</h2>
-      <p> $59.99/year</p>
+      <div class='col1'></div>
+      <div class='col2'>
+        <p>Annual Plan</p>
+        <p> $59.99/year</p>
+      </div>
       <p>Change</p>
     </div>
 
 
-    <div> Proceed to Payment</div>
+    <div class='proceed'>
+      <p>Proceed to Payment</p>
+    </div>
     <div> Cancel Order</div>
 
   </div>
