--- a/Order summary component challenge/index.html
+++ b/Order summary component challenge/index.html
@@ -13,33 +13,35 @@
   <title>Frontend Mentor | Order summary card</title>
 
 <body>
-  <div class="wrapper">
-    <div class='mainPhotoBox'></div>
-    <div class="title">
-      <h1>Order Summary</h1>
-      <p>You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!</p>
-    </div>
-
-    <div class='annualPlan'>
-      <div class='col1'></div>
-      <div class='col2'>
-        <p>Annual Plan</p>
-        <p> $59.99/year</p>
+  <div class='mainwrapper'>
+    <div class="wrapper">
+      <div class='mainPhotoBox'></div>
+      <div class="title">
+        <h1>Order Summary</h1>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!</p>
       </div>
-      <p>Change</p>
+
+      <div class='annualPlan'>
+        <div class='col1'></div>
+        <div class='col2'>
+          <p>Annual Plan</p>
+          <p> $59.99/year</p>
+        </div>
+        <p>Change</p>
+      </div>
+
+
+      <div class='proceed'>
+        <p>Proceed to Payment</p>
+      </div>
+      <div class="cancel"> Cancel Order</div>
+
     </div>
-
-
-    <div class='proceed'>
-      <p>Proceed to Payment</p>
-    </div>
-    <div> Cancel Order</div>
-
+    <footer>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href='https://github.com/KBus9455'>KBus9455 </a> </footer>
   </div>
-  <footer>
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">KBus9455</a></footer>
   </div>
 </body>
 
