--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -5,20 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | E-commerce product page</title>
 </head>
 
 <body>
-  <div class='topPanel'>
+  <div class='mobile topPanel'>
     <div class='menu'><img src="images/icon-menu.svg" alt="menubar"></div>
     <div class='logo'><img src="images/logo.svg" alt="logo"></div>
     <div class='cart'><img src="images/icon-cart.svg" alt="cart"><span> </span><img src="images/image-avatar.png"
         alt="avatar"></div>
   </div>
-  <nav>
+  <nav class='menu-mobile'>
 
     <ul>
       <li>X</li>
@@ -29,34 +31,41 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
-  <div>
-    <div> </div>
-    <div class='description'>
-      Sneaker Company
+  <div class='productWrapper'>
+    <div class='productPhoto'><img src="images/image-product-1.jpg" alt="prod1"> </div>
+    <div class='product-description'>
+      <h2>Sneaker Company</h2>
 
       <h1>Fall Limited Edition Sneakers</h1>
+      <p> These low-profile sneakers are your perfect casual wear companion. Featuring a
+        durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
 
-      These low-profile sneakers are your perfect casual wear companion. Featuring a
-      durable rubber outer sole, they’ll withstand everything the weather can offer.
-      <div>
-        <p>$125.00</p>
-        <p>50%</p>
+      <div class='pricing'>
+        <h1>$125.00</h1>
+        <div>
+          <p>50%</p>
+        </div>
         <p>$250.00</p>
       </div>
     </div>
   </div>
   <div>
-    <div>
-      0
+    <div class='counter'>
+      <div><img src="images/icon-minus.svg" alt="plus"> </div>
+      <div class='counterNumber'> 0 </div>
+      <div><img src="images/icon-plus.svg" alt="plus"> </div>
     </div>
-    <div>
-      Add to cart
+    <div class='addToCart'>
+      <div></div>
+      <p> Add to cart</p>
     </div>
   </div>
+  <footer>
+    <div>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">KBus9455</a>.
+  </footer>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
 
