--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -21,15 +21,15 @@
         alt="avatar"></div>
   </div>
   <nav class='menu-mobile'>
-
     <ul>
-      <li>X</li>
+      <li class='close'><img src="images/icon-close.svg" alt="close"></li>
       <li><a href="#">Collections</a></li>
       <li><a href="#">Men</a></li>
       <li><a href="#">Women</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
+    <div></div>
   </nav>
   <div class='productWrapper'>
     <div class='productPhoto'><img src="images/image-product-1.jpg" alt="prod1"> </div>
@@ -65,7 +65,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">KBus9455</a>.
   </footer>
-
+  <script src="main.js"></script>
   </div>
 </body>
 
