add cart display (empty)

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -60,6 +60,10 @@
       <p> Add to cart</p>
     </div>
   </div>
+  <div class='displayCart'>
+    <p>Cart</p>
+    <p>Your cart is empty.</p>
+  </div>
   <footer>
     <div>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
