add arrows to photo

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -32,7 +32,9 @@
     <div></div>
   </nav>
   <div class='productWrapper'>
-    <div class='productPhoto'><img src="images/image-product-1.jpg" alt="prod1"> </div>
+    <div class='productPhoto'><img src="images/icon-previous.svg" alt="previous" class="arrow"><img
+        src="images/image-product-1.jpg" alt="prod1"><img src="images/icon-next.svg" alt="next" class="arrow">
+    </div>
     <div class='product-description'>
       <h2>Sneaker Company</h2>
 
