desktop version in progress

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -31,35 +31,54 @@
     </ul>
     <div></div>
   </nav>
+  <nav class='desktop topPanel'>
+    <ul class="dekstop col1">
+      <li>
+        <img src="images/logo.svg" alt="logo">
+      </li>
+      <li><a href="#">Collections</a></li>
+      <li><a href="#">Men</a></li>
+      <li><a href="#">Women</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <ul class="dekstop col1">
+      <li class='cart'><img src="images/icon-cart.svg" alt="cart"><span> </span><img src="images/image-avatar.png"
+          alt="avatar"></li>
+    </ul>
+  </nav>
   <div class='productWrapper'>
     <div class='productPhoto'><img src="images/icon-previous.svg" alt="previous" class="arrow"><img
         src="images/image-product-1.jpg" alt="prod1"><img src="images/icon-next.svg" alt="next" class="arrow">
     </div>
-    <div class='product-description'>
-      <h2>Sneaker Company</h2>
+    <div class='desktop-desciption'>
+      <div class='product-description'>
+        <h2>Sneaker Company</h2>
 
-      <h1>Fall Limited Edition Sneakers</h1>
-      <p> These low-profile sneakers are your perfect casual wear companion. Featuring a
-        durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+        <h1>Fall Limited Edition Sneakers</h1>
+        <p> These low-profile sneakers are your perfect casual wear companion. Featuring a
+          durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
 
-      <div class='pricing'>
-        <h1>$125.00</h1>
-        <div>
-          <p>50%</p>
+        <div class='pricing'>
+          <h1>$125.00</h1>
+          <div>
+            <p>50%</p>
+          </div>
+          <p>$250.00</p>
         </div>
-        <p>$250.00</p>
       </div>
-    </div>
-  </div>
-  <div>
-    <div class='counter'>
-      <div><img src="images/icon-minus.svg" alt="plus"> </div>
-      <div class='counterNumber'> 0 </div>
-      <div><img src="images/icon-plus.svg" alt="plus"> </div>
-    </div>
-    <div class='addToCart'>
-      <div></div>
-      <p> Add to cart</p>
+
+      <div>
+        <div class='counter'>
+          <div><img src="images/icon-minus.svg" alt="plus"> </div>
+          <div class='counterNumber'> 0 </div>
+          <div><img src="images/icon-plus.svg" alt="plus"> </div>
+        </div>
+        <div class='addToCart'>
+          <div></div>
+          <p> Add to cart</p>
+        </div>
+      </div>
     </div>
   </div>
   <div class='displayCart'>
