--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -32,7 +32,7 @@
     <div></div>
   </nav>
   <nav class='desktop topPanel'>
-    <ul class="dekstop col1">
+    <ul class="desktop col1">
       <li>
         <img src="images/logo.svg" alt="logo">
       </li>
@@ -42,9 +42,9 @@
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
-    <ul class="dekstop col1">
-      <li class='cart'><img src="images/icon-cart.svg" alt="cart"><span> </span><img src="images/image-avatar.png"
-          alt="avatar"></li>
+    <ul class="desktop col2">
+      <li class='cartTopPanel'><img src="images/icon-cart.svg" alt="cart"></li>
+      <li class='avatar'><img src="images/image-avatar.png" alt="avatar"></li>
     </ul>
   </nav>
   <div class='productWrapper'>
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div>
+      <div class='description-buttons'>
         <div class='counter'>
           <div><img src="images/icon-minus.svg" alt="plus"> </div>
           <div class='counterNumber'> 0 </div>
