finish desktop display, rest project will be in different repository

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -50,6 +50,9 @@
   <div class='productWrapper'>
     <div class='productPhoto'><img src="images/icon-previous.svg" alt="previous" class="arrow"><img
         src="images/image-product-1.jpg" alt="prod1"><img src="images/icon-next.svg" alt="next" class="arrow">
+      <div class='desktop-gallery'><img src="images/image-product-1.jpg" alt="prod1"><img
+          src="images/image-product-2.jpg" alt="prod2"><img src="images/image-product-3.jpg" alt="prod3"><img
+          src="images/image-product-4.jpg" alt="prod4"></div>
     </div>
     <div class='desktop-desciption'>
       <div class='product-description'>
